--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -324,52 +324,56 @@ body
           .section7__license.section7__license-7
           .section7__license.section7__license-8
     .section.section8
-      .container
-        .section__title
+      .container.section8-container
+        .section__title.section8__title
           | часто задаваемые вопросы
         .section8__ask-wrapper
-          .section8__ask.section8__ask-1
-            | 1. Сколько денег я получу за свой автомобиль (процент от стоимости авто)?
-          .section8__ask.section8__ask-2
-            | 2. Если на руках дубликат ПТС (потерян ПТС, кончилось место в ПТС т.д.)?
-          .section8__ask.section8__ask-3
-            | 3. Как быстро я смогу получить ПТС после оплаты займа?
-          .section8__ask.section8__ask-4
-            | 4. Нужно ли приезжать в офис на автомобиле? Что, если автомобиль не на ходу?
-          .section8__ask.section8__ask-5
-            | 5. Нужно ли оформлять на Молл-Авто ломбард генеральную доверенность?
-          .section8__ask.section8__ask-6
-            | 6. Нужно ли выезжать еще куда-то для заключения договора?
-          .section8__ask.section8__ask-7
-            | 7. Что будет при просрочке платежей?
-          .section8__ask.section8__ask-8
-            | 8. При просрочке платежей смогут забрать мое авто?
-          .section8__ask.section8__ask-9
-            | 9. Если долго не вносить платежи (месяц, два) или нет денег для того, чтобы вносить платежи регулярно, что будет?
-          .section8__ask.section8__ask-10
-            | 10. Какие документы могут быть необходимы для получения заёмных денег под ПТС?
-          .section8__ask.section8__ask-11
-            | 11. Если я использую автомобиль по доверенности, могу ли я получить деньги, заложив ПТС?
-          .section8__ask.section8__ask-12
-            | 12. Автомобиль взят в кредит, ПТС находится в банке. Можно ли в таком случае взять займ?
-          .section8__ask.section8__ask-13
-            | 13. После оплаты суммы займа возникают ли скрытые проценты?
-          .section8__ask.section8__ask-14
-            | 14. Ставится ли какая-либо отметка о залоге в ПТС?
-          .section8__ask.section8__ask-15
-            | 15. Какие документы после заключения сделки останутся в Молл-Автоломбард?
-          .section8__ask.section8__ask-16
-            | 16. У меня нет второго комплекта ключей?
-          .section8__ask.section8__ask-17
-            | 17. Я могу получить займ если на автомобиль наложен арест или запрет на регистрационные действия?
+          .section8__ask-wrapper-1
+            a(href="#").section8__ask.section8__ask-1
+              | 1. Сколько денег я получу за свой автомобиль (процент от стоимости авто)?
+            a(href="#").section8__ask.section8__ask-2
+              | 2. Если на руках дубликат ПТС (потерян ПТС, кончилось место в ПТС т.д.)?
+            a(href="#").section8__ask.section8__ask-3
+              | 3. Как быстро я смогу получить ПТС после оплаты займа?
+            a(href="#").section8__ask.section8__ask-4
+              | 4. Нужно ли приезжать в офис на автомобиле? Что, если автомобиль не на ходу?
+            a(href="#").section8__ask.section8__ask-5
+              | 5. Нужно ли оформлять на Молл-Авто ломбард генеральную доверенность?
+            a(href="#").section8__ask.section8__ask-6
+              | 6. Нужно ли выезжать еще куда-то для заключения договора?
+            a(href="#").section8__ask.section8__ask-7
+              | 7. Что будет при просрочке платежей?
+            a(href="#").section8__ask.section8__ask-8
+              | 8. При просрочке платежей смогут забрать мое авто?
+            a(href="#").section8__ask.section8__ask-9
+              | 9. Если долго не вносить платежи (месяц, два) или нет денег для того, чтобы вносить платежи регулярно, что будет?
+          .section8__ask-wrapper-2
+            a(href="#").section8__ask.section8__ask-10
+              | 10. Какие документы могут быть необходимы для получения заёмных денег под ПТС?
+            a(href="#").section8__ask.section8__ask-11
+              | 11. Если я использую автомобиль по доверенности, могу ли я получить деньги, заложив ПТС?
+            a(href="#").section8__ask.section8__ask-12
+              | 12. Автомобиль взят в кредит, ПТС находится в банке. Можно ли в таком случае взять займ?
+            a(href="#").section8__ask.section8__ask-13
+              | 13. После оплаты суммы займа возникают ли скрытые проценты?
+            a(href="#").section8__ask.section8__ask-14
+              | 14. Ставится ли какая-либо отметка о залоге в ПТС?
+            a(href="#").section8__ask.section8__ask-15
+              | 15. Какие документы после заключения сделки останутся в Молл-Автоломбард?
+            a(href="#").section8__ask.section8__ask-16
+              | 16. У меня нет второго комплекта ключей?
+            a(href="#").section8__ask.section8__ask-17
+              | 17. Я могу получить займ если на автомобиль наложен арест или запрет на регистрационные действия?
         .section8__your-ask
           .section8__your-ask-text
-            | Если не нашли что искали Вы можете задать свой вопрос
+            | Если не нашли что искали
+            br.section8__your-ask-text-br
+            | Вы можете задать свой вопрос
           a(href="#").btn.section8__btn
-          | Задать вопрос
+            | Задать вопрос
     .section.section9
       .container
-        .section__title
+        .section__title.section9__title
           | отзывы клиентов о работе с нами
         .section9__slider
           .section9__slide.section9__slide-1
