--- a/app/stylesheets/sections/_section1.scss
+++ b/app/stylesheets/sections/_section1.scss
@@ -27,11 +27,14 @@
   font-family: Intro;
   font-size: 60px;
   margin-bottom: 17px;
+
+  color: #fff;
 }
 
 .section1__title2 {
   font-family: Intro;
   font-size: 36px;
+  color: #fff;
 }
 
 .section1__text {
