--- a/app/stylesheets/sections/_section3.scss
+++ b/app/stylesheets/sections/_section3.scss
@@ -3,7 +3,7 @@
   background-size: cover;
 }
 
-.section3-title {
+.section__title.section3-title {
   margin-bottom: 83px;
 
   font-family: Intro;
