--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -377,63 +377,70 @@ body
           | отзывы клиентов о работе с нами
         .section9__slider
           .section9__slide.section9__slide-1
-            .section9__slide-icon
             .section9__slide-wrapper
-              .section9__slide-title
-                | Вася
-              .section9__slide-text
-                p
-                  | Кредиты под залог автомобиля выдают многие автоломбарды, но немногие предоставляют кредиты с возможностью пользования автомобилем. Вы сможете пользоваться собственным авто все время действия договора по программе " Авто остается у Вас".
-                p
-                  | Не нужно расставаться с собственным авто, не нужно оставлять его на стоянке автоломбарда, переживать за его сохранность, надеясь на порядочность кредитора. Используйте свой автомобиль с максимальной выгодой для себя и своих близких.
+              .section9__slide-icon
+              .section9__slide-text-wrapper
+                .section9__slide-title
+                  | Вася
+                .section9__slide-text
+                  p
+                    | Кредиты под залог автомобиля выдают многие автоломбарды, но немногие предоставляют кредиты с возможностью пользования автомобилем. Вы сможете пользоваться собственным авто все время действия договора по программе " Авто остается у Вас".
+                  p
+                    | Не нужно расставаться с собственным авто, не нужно оставлять его на стоянке автоломбарда, переживать за его сохранность, надеясь на порядочность кредитора. Используйте свой автомобиль с максимальной выгодой для себя и своих близких.
           .section9__slide.section9__slide-2
-            .section9__slide-icon
             .section9__slide-wrapper
-              .section9__slide-title
-                | Вася
-              .section9__slide-text
-                | Текст
+              .section9__slide-icon
+              .section9__slide-text-wrapper
+                .section9__slide-title
+                  | Вася
+                .section9__slide-text
+                  | Текст2
           .section9__slide.section9__slide-2
-            .section9__slide-icon
             .section9__slide-wrapper
-              .section9__slide-title
-                | Вася
-              .section9__slide-text
-                | Текст
+              .section9__slide-icon
+              .section9__slide-text-wrapper
+                .section9__slide-title
+                  | Вася
+                .section9__slide-text
+                  | Текст3
           .section9__slide.section9__slide-2
-            .section9__slide-icon
             .section9__slide-wrapper
-              .section9__slide-title
-                | Вася
-              .section9__slide-text
-                | Текст
+              .section9__slide-icon
+              .section9__slide-text-wrapper
+                .section9__slide-title
+                  | Вася
+                .section9__slide-text
+                  | Текст4
           .section9__slide.section9__slide-2
-            .section9__slide-icon
             .section9__slide-wrapper
-              .section9__slide-title
-                | Вася
-              .section9__slide-text
-                | Текст
+              .section9__slide-icon
+              .section9__slide-text-wrapper
+                .section9__slide-title
+                  | Вася
+                .section9__slide-text
+                  | Текст5
         .section9__counter
           span.section9__counter-big
             | 01
           =" "
           span.section9__counter-min
-            | | 05
-        .section9__slider-controls
-          .section9__slider-control-left
-            | Назад
-          .section9__slider-control-right
-            | вперед
+            |  05
+          .section9__slider-controls
+            .section9__slider-control-left
+              | Назад
+            .section9__slider-control-right
+              | вперед
+        a(href="#").btn.section9__btn
+            | Оставить отзыв
     .section.section10
-      .container
+      .container.section10__container
         .section10__wrapper-desc
-          .section__title
+          .section__title.section10__title
             | контакты
           .section10__text
             | Вы можете оставить Ваши контакты и мы сами свяжемся с Вами
           a(href="#").btn.section10__btn
-          | Оставить контакты
+            | Оставить контакты
           .section10__location
             span.section10__location-icon
             | 454048, г. Челябинск, ул. Образцова, 25
