--- a/app/stylesheets/sections/_section9.scss
+++ b/app/stylesheets/sections/_section9.scss
@@ -18,3 +18,96 @@
     bottom: -42px;
   }
 }
+
+.section9__slider {
+  display: inline-block;
+  vertical-align: top;
+  max-width: 745px;
+  width: 100%;
+
+  margin-bottom: 60px;
+  margin-right: 64px;
+}
+
+.section9__slide-wrapper {
+  max-width: 745px;
+  min-height: 382px;
+  padding-left: 65px;
+  padding-top: 48px;
+
+  background-color: #ffffff;
+
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 1.71;
+  color: #030206;
+}
+
+.section9__slide-icon {
+  display: inline-block;
+  vertical-align: top;
+
+  width: 118px;
+  height: 118px;
+  margin-right: 49px;
+
+  background: url('../images/review-foto.png') no-repeat center;
+}
+
+.section9__slide-text-wrapper {
+  display: inline-block;
+  width: 394px;
+}
+
+.section9__slide-title {
+  margin-bottom: 24px;
+
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 1.33;
+  color: #030206;
+}
+
+.section9__slide-text {
+  font-size: 14px;
+  line-height: 1.71;
+  color: #030206;
+}
+
+.section9__counter {
+  position: relative;
+  margin-right: 30px;
+
+  display: inline-block;
+  padding-top: 170px;
+}
+
+.section9__counter-big {
+  font-family: Intro;
+  font-size: 72px;
+   color: #ffffff;
+}
+
+.section9__counter-min {
+  position: absolute;
+  right: -70px;
+  bottom: 70px;
+
+  font-family: Intro;
+  font-size: 36.2px;
+  color: rgba(255, 255, 255, 0.3);
+
+  &::after {
+    content: '';
+    position: absolute;
+    left: -16px;
+    top: 8px;
+
+    display: block;
+    width: 5px;
+    height: 26px;
+    opacity: 0.3;
+    background-color: #ffffff;
+  }
+}
