--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -454,12 +454,14 @@ body
             span.section10__email-icon
             a(href= "mailto:moll.avtolombard@mail.ru")
               | moll.avtolombard@mail.ru
-        .section10__wrapper-map
+      #map.section10__map
+
       .section10__footer
-        .section10__footer-copyright
-          | © Mollavtolombard 2017
-        a(href="#").section10__footer-person-data
-          | Обработка персональных данных
+        .section10__footer-wrapper
+          .section10__footer-copyright
+            | © Mollavtolombard 2017
+          a(href="#").section10__footer-person-data
+            | Обработка персональных данных
         .social-links
           a(href="#").social-links__google
           a(href="#").social-links__mail
